--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
 </head>
 
 <body>
-  
+  <header>
+    <nav class="navbar">
+      <ul>
+        <li>home</li>
+        <li>about</li>
+      </ul>
+    </nav>
+  </header>
   <div class="container">
     MADE BY PRITHVI ROY & ANISH DAS
     <div class="todoapp">
-      <h1 class="heading">TO-DO LIST <img src="icon.png"</h1>
+      <h1 class="heading">TO-DO LIST </h1>
+      <div class="image">
+        <img src="icon.png">
+      </div>
       <div class="rows">
           <input type="text" id="input"
             placeholder="Add a new todo">
